--- a/src/css/style001.css
+++ b/src/css/style001.css
@@ -2,7 +2,13 @@
 
 body
 {
+    margin: 0px 8px;
     background-color: rgb(30, 30, 30);
+}
+
+hr
+{
+    margin: 1px 1px;
 }
 
 .panel
@@ -63,7 +69,7 @@ textarea
 /* ---- */
 
 /* Dedicated to God the Father */
-/* All Rights Reserved Christopher Andrew Topalian Copyright 2000-2025 */
+/* All Rights Reserved Christopher Andrew Topalian Copyright 2000-2026 */
 /* https://github.com/ChristopherTopalian */
 /* https://github.com/ChristopherAndrewTopalian */
 /* https://sites.google.com/view/CollegeOfScripting */
